# rediffbol-prpl

./: CHANGELOG  CSNewMailCountResponse.c  CSNewMailCountResponse.h  FontParser.cpp  FontParser.h  GkGetLoginServersResponse.c  GkGetLoginServersResponse.cpp  GkGetLoginServersResponse.h  LoginTask.c  Makefile  Makefile.am  Makefile.in  PurpleAsyncConnHandler.h  README  RObject.cpp  RObject.h  ResponseGeneric.cpp  ResponseGeneric.h  ResponseParser.c  ResponseParser.cpp  avatar.cpp  configure.ac  conn.c  conn.cpp  conn.h  encode.cpp  encode.h  login.c  messagebuffer.c  messagebuffer.cpp  messagebuffer.h  packet_handler.cpp  packet_handler.h  rediffbol.c  rediffbol.cpp  rediffbol.h  rediffbol_chatroom.cpp  rediffbol_init.cpp  request.h  response.c  (+4 more)
.deps/: nullprpl.Plo
